# ChildrenEventPython

./: pyproject.toml
childrenevents/: app.py
childrenevents/controller/: routes.py  sport_event_controller.py
childrenevents/manager/: children_events_options_manager.py
childrenevents/model/: __init__.py  children_event_option.py  costume_party.py  event_venue.py  master_class.py  sport_event.py
childrenevents/ua/lviv/iot/manager/: ChildrenEventsOptionsManager.py  ChildrenEventsOptionsManagerUtils.py  children_events_options_manager.py  children_events_options_manager_utils.py
childrenevents/ua/lviv/iot/model/: ChildrenEventOption.py  CostumeParty.py  MasterClass.py  SportEvent.py  __init__.py  children_event_option.py  costume_party.py  event_venue.py  master_class.py  sport_event.py
tests/: __init__.py  test_childrenevents.py
tests/ua/lviv/iot/: test_children_event_option_manager.py  test_children_event_option_manager_utils.py
