[tool.poetry]
name = "ChildrenEvents"
version = "0.1.0"
description = ""
authors = ["Nikita Horb <masternik007@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
enum34 = "^1.1.10"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
